# anagrampoems

./: .gitignore  README.md
backend/: Configs.js  checkKeyMiddleware.js  checkQueryParams.js  commonWords.js  deleteExcludedWord.js  deletePoemLines.js  deletePoems.js  express-app.js  firstWord.js  firstWord.test.js  getDBLoginCookie.js  getExcludedWords.js  getGrams.js  getGrams.test.js  getPoem.js  getPoemLines.js  getPoemText.js  getPoems.js  google-10000-english-usa.json  google-10000-english-usa.txt  install-build.sh  lambda.js  letter-counts.awk  letterCounts.js  letters.js  letters.test.js  login.js  logout.js  manyWords.js  package-lock.json  package.json  postLineOrder.js  postPoemLines.js  postPoems.js  putExcludedWords.js  putLineWords.js  putPoemText.js  putPoems.js  schema.js  set_diff.py  (+7 more)
backend-py/: .gitignore  lambda_handler.py  pyproject.toml
backend-py/backend_py/: index.py
backend-py/tests/: test_lambda_handler.py
frontend/: favicon.drawio  index.html  package-lock.json  package.json
infra/: package-lock.json  package.json  tsconfig.json
inspiration/: .gitignore  README.md  anagrams.js
itest/: App.itest.cjs  App.kate.itest.cjs  itest.sh  jest.config.js  package-lock.json  package.json
reference/: stackoverflow-post-55210-algorithm-to-generate-anagrams.html
web/: .gitignore  build.sh  express-app.ts  lambda.ts  package-lock.json  package.json  tsconfig.back.json  tsconfig.front.json  tsconfig.json  (+1 more)
web-express/: package-lock.json  package.json
web-js/: build.sh  express-app.js  package-lock.json  package.json  vite.config.js
(+49 files in other folders)
